--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.arquillian.graphene</groupId>
     <artifactId>graphene-visual-testing</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
-        <screeshooter.version>2.0.2-SNAPSHOT</screeshooter.version>
-        <reporter.version>1.0.0.Alpha2</reporter.version>
+        <screeshooter.version>2.1.0-SNAPSHOT</screeshooter.version>
+        <reporter.version>1.0.0.Alpha3</reporter.version>
         <rusheye.version>1.0.0-SNAPSHOT</rusheye.version>
     </properties>
 
@@ -28,4 +28,21 @@
             <version>${rusheye.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.1</version>
+                    <configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
 </project>
