--- a/arquillian-extension/pom.xml
+++ b/arquillian-extension/pom.xml
@@ -3,19 +3,32 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>	
-	<groupId>org.jboss.arquillian.extension</groupId>
-	<artifactId>graphene-visual-testing-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<relativePath>../pom.xml</relativePath>
+        <groupId>org.jboss.arquillian.extension</groupId>
+        <artifactId>graphene-visual-testing-parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>	 
 
-    <artifactId>graphene-visual-testing-backend</artifactId>
+    <artifactId>graphene-visual-testing-extension</artifactId>
 
     <properties>
         <screeshooter.version>2.1.0-SNAPSHOT</screeshooter.version>
         <reporter.version>1.0.0.Alpha3</reporter.version>
         <rusheye.version>1.0.0-SNAPSHOT</rusheye.version>
+        <modeshape.version>4.0.0.Final</modeshape.version>
     </properties>
+    
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.modeshape.bom</groupId>
+                <artifactId>modeshape-bom-embedded</artifactId>
+                <version>${modeshape.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -32,6 +45,16 @@
             <groupId>org.jboss.rusheye</groupId>
             <artifactId>rusheye-impl</artifactId>
             <version>${rusheye.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>4.3.6</version>
         </dependency>
     </dependencies>
 
