--- a/arquillian-extension/pom.xml
+++ b/arquillian-extension/pom.xml
@@ -61,6 +61,20 @@
             <artifactId>json</artifactId>
             <version>20140107</version>
         </dependency>
+        
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.8</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
