--- a/arquillian-extension/pom.xml
+++ b/arquillian-extension/pom.xml
@@ -13,7 +13,7 @@
 
     <properties>
         <screeshooter.version>2.1.0-SNAPSHOT</screeshooter.version>
-        <reporter.version>1.0.0.Alpha3</reporter.version>
+        <reporter.version>1.0.0.Beta1</reporter.version>
         <rusheye.version>1.0.0-SNAPSHOT</rusheye.version>
         <modeshape.version>4.0.0.Final</modeshape.version>
     </properties>
