api module extracted from arq extension

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -228,8 +228,11 @@
                 <configuration>
                     <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <archive>
+                         <manifestFile>src/main/webapp/META-INF/MANIFEST.MF</manifestFile>
+                    </archive>
                 </configuration>
-            </plugin>
+            </plugin> 
             <!-- Compiler plugin enforces Java 1.6 compatibility and activates annotation 
             processors -->
             <plugin>
