--- a/arquillian-extension/pom.xml
+++ b/arquillian-extension/pom.xml
@@ -1,96 +1,23 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>	
-        <groupId>org.jboss.arquillian.extension</groupId>
-        <artifactId>graphene-visual-testing-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>	 
+    <parent>
+      <groupId>org.jboss.arquillian.extension</groupId>
+      <artifactId>graphene-visual-testing-parent</artifactId>
+      <relativePath>../pom.xml</relativePath>
+      <version>0.0.1-SNAPSHOT</version>
+    </parent>
 
-    <artifactId>graphene-visual-testing-extension</artifactId>
+    <artifactId>graphene-visual-testing-arq-ext-parent</artifactId>
+    <packaging>pom</packaging>
+    <name>Graphene Visual Testing Parent Arquillian Extension Parent</name>
 
-    <properties>
-        <screeshooter.version>2.1.0-SNAPSHOT</screeshooter.version>
-        <reporter.version>1.0.0.Beta1</reporter.version>
-        <rusheye.version>1.0.0-SNAPSHOT</rusheye.version>
-        <modeshape.version>4.0.0.Final</modeshape.version>
-    </properties>
-    
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.modeshape.bom</groupId>
-                <artifactId>modeshape-bom-embedded</artifactId>
-                <version>${modeshape.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+    <modules>
+	<module>api</module>
+	<module>impl</module>
+    </modules>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.jboss.arquillian.graphene</groupId>
-            <artifactId>arquillian-browser-screenshooter</artifactId>
-            <version>${screeshooter.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.arquillian.extension</groupId>
-            <artifactId>arquillian-recorder-reporter-impl</artifactId>
-            <version>${reporter.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.rusheye</groupId>
-            <artifactId>rusheye-impl</artifactId>
-            <version>${rusheye.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.3.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>fluent-hc</artifactId>
-            <version>4.3.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20140107</version>
-        </dependency>
-        
-        <!-- Test dependencies -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.10</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>1.10.8</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.1</version>
-                    <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-
+    <description>
+        This is the parent for Graphene Visual Testing Arquillian Extension.
+    </description>
 </project>
