--- a/arquillian-extension/impl/pom.xml
+++ b/arquillian-extension/impl/pom.xml
@@ -32,6 +32,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>graphene-visual-testing-arq-ext-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.arquillian.graphene</groupId>
             <artifactId>arquillian-browser-screenshooter</artifactId>
             <version>${screeshooter.version}</version>
